--- a/app/src/main/res/layout/activity_end_game.xml
+++ b/app/src/main/res/layout/activity_end_game.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="edu.wisc.ece.project454.EndGame">
+    tools:context="edu.wisc.ece.wiscotrail.EndGame">
 
     <TextView
         android:text="Weather:"
@@ -134,7 +134,7 @@
         android:layout_alignBottom="@+id/textView35"
         android:layout_toRightOf="@+id/textView33"
         android:layout_toEndOf="@+id/textView33"
-        android:id="@+id/textView49" />
+        android:id="@+id/rations_field" />
 
     <TextView
         android:text="TextView"
@@ -150,8 +150,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/textView39"
-        android:layout_alignRight="@+id/textView49"
-        android:layout_alignEnd="@+id/textView49"
+        android:layout_alignRight="@+id/rations_field"
+        android:layout_alignEnd="@+id/rations_field"
         android:id="@+id/morale_field" />
 
     <TextView
