--- a/app/src/main/res/layout/activity_farm_nfleet.xml
+++ b/app/src/main/res/layout/activity_farm_nfleet.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="edu.wisc.ece.project454.FarmNFleet">
+    tools:context="edu.wisc.ece.wiscotrail.FarmNFleet">
 
     <TextView
         android:text="Welcome to the Farm and Fleet, the store where you can buy all the supplies you'll need for your journey!"
