--- a/app/src/main/res/layout/activity_hunt.xml
+++ b/app/src/main/res/layout/activity_hunt.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="edu.wisc.ece.project454.Hunt">
+    tools:context="edu.wisc.ece.wiscotrail.Hunt">
 
     <TextView
         android:text="Hunting."
