--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
 
     android:background="@drawable/cowprint"
 
-    tools:context="edu.wisc.ece.project454.MainActivity">
+    tools:context="edu.wisc.ece.wiscotrail.MainActivity">
 
     <!-- widgets have the necessary modifications copied into ALL widgets grouped @ top -->
 
