--- a/app/src/main/res/layout/activity_management_options.xml
+++ b/app/src/main/res/layout/activity_management_options.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@color/black"
-    tools:context="edu.wisc.ece.project454.ManagementOptions">
+    tools:context="edu.wisc.ece.wiscotrail.ManagementOptions">
 
     <Button
         android:text="Turn sound off"
