--- a/app/src/main/res/layout/activity_mississippi_river.xml
+++ b/app/src/main/res/layout/activity_mississippi_river.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="edu.wisc.ece.project454.MississippiRiver">
+    tools:context="edu.wisc.ece.wiscotrail.MississippiRiver">
 
     <TextView
         android:text="Mississippi River Crossing"
