--- a/app/src/main/res/layout/activity_new_glarus.xml
+++ b/app/src/main/res/layout/activity_new_glarus.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="edu.wisc.ece.project454.NewGlarus">
+    tools:context="edu.wisc.ece.wiscotrail.NewGlarus">
 
     <TextView
         android:text="New Glarus"
