--- a/app/src/main/res/layout/activity_pick_leader.xml
+++ b/app/src/main/res/layout/activity_pick_leader.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@color/black"
-    tools:context="edu.wisc.ece.project454.PickLeader">
+    tools:context="edu.wisc.ece.wiscotrail.PickLeader">
 
     <TextView
         android:text="What is the name of the leader of your party?"
