--- a/app/src/main/res/layout/activity_sheboygan.xml
+++ b/app/src/main/res/layout/activity_sheboygan.xml
@@ -8,6 +8,6 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="edu.wisc.ece.project454.Sheboygan">
+    tools:context="edu.wisc.ece.wiscotrail.Sheboygan">
 
 </RelativeLayout>
