--- a/app/src/main/res/layout/activity_start_trail.xml
+++ b/app/src/main/res/layout/activity_start_trail.xml
@@ -10,7 +10,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@color/black"
 
-    tools:context="edu.wisc.ece.project454.StartTrail">
+    tools:context="edu.wisc.ece.wiscotrail.StartTrail">
 
     <TextView
         android:text="Many kinds of people made \nthe trip to Lambeau."
