--- a/app/src/main/res/layout/activity_trail_info.xml
+++ b/app/src/main/res/layout/activity_trail_info.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@color/black"
-    tools:context="edu.wisc.ece.project454.TrailInfo">
+    tools:context="edu.wisc.ece.wiscotrail.TrailInfo">
 
     <TextView
         android:text="Can you make it to Green Bay to see the Packers game?\n
