--- a/app/src/main/res/layout/activity_pick_party.xml
+++ b/app/src/main/res/layout/activity_pick_party.xml
@@ -26,68 +26,71 @@
         android:layout_marginRight="16dp" />
 
     <EditText
-        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
         android:text=""
         android:hint="First friend"
         android:ems="10"
         android:id="@+id/editText3"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toTopOf="@+id/editText4"
-        app:layout_constraintRight_toRightOf="@+id/textView3"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/textView3"
-        app:layout_constraintHorizontal_bias="0.0" />
+        android:layout_width="172dp"
+        app:layout_constraintRight_toLeftOf="@+id/guideline3"
+        android:layout_marginEnd="4dp"
+        android:layout_marginRight="4dp"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="16dp"
+        app:layout_constraintHorizontal_bias="0.8"
+        app:layout_constraintBottom_toTopOf="@+id/editText5"
+        android:layout_marginBottom="8dp" />
 
     <EditText
-        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
         android:text=""
         android:hint="Second friend"
         android:ems="10"
         android:id="@+id/editText4"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toTopOf="@+id/editText5"
-        app:layout_constraintRight_toRightOf="@+id/editText3"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/editText3"
-        app:layout_constraintHorizontal_bias="0.0" />
+        android:layout_width="0dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="16dp"
+        app:layout_constraintLeft_toLeftOf="@+id/guideline3"
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
+        app:layout_constraintBottom_toTopOf="@+id/editText2"
+        android:layout_marginBottom="8dp" />
 
     <EditText
-        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
         android:text=""
-        android:hint="Third friend"
         android:ems="10"
         android:id="@+id/editText5"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toTopOf="@+id/editText2"
-        app:layout_constraintRight_toRightOf="@+id/editText4"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/editText4"
-        app:layout_constraintHorizontal_bias="0.0" />
+        android:hint="Third Friend"
+        android:layout_width="0dp"
+        app:layout_constraintRight_toLeftOf="@+id/guideline3"
+        android:layout_marginEnd="4dp"
+        android:layout_marginRight="4dp"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/button6" />
 
     <EditText
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
         android:text=""
-        android:hint="Forth friend"
+        android:hint="Fourth Friend"
         android:ems="10"
         android:id="@+id/editText2"
-        tools:layout_constraintRight_creator="1"
-        app:layout_constraintRight_toRightOf="@+id/editText5"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/editText5"
-        app:layout_constraintHorizontal_bias="1.0"
+        android:layout_marginStart="4dp"
+        app:layout_constraintLeft_toLeftOf="@+id/guideline3"
+        android:layout_marginLeft="4dp"
         app:layout_constraintBottom_toTopOf="@+id/button6"
-        android:layout_marginBottom="8dp" />
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="16dp" />
 
     <Button
         android:text="Next"
@@ -95,12 +98,30 @@
         android:layout_height="wrap_content"
         android:id="@+id/button6"
         android:onClick="goNext"
-        tools:layout_constraintRight_creator="1"
-        app:layout_constraintRight_toRightOf="@+id/editText2"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        app:layout_constraintHorizontal_bias="0.93"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp" />
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp" />
+
+    <android.support.constraint.Guideline
+        android:layout_width="wrap_content"
+        android:layout_height="511dp"
+        android:id="@+id/guideline3"
+        app:layout_constraintGuide_begin="192dp"
+        android:orientation="vertical"
+        tools:layout_editor_absoluteY="0dp"
+        tools:layout_editor_absoluteX="192dp" />
+
+    <android.support.constraint.Guideline
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/guideline4"
+        app:layout_constraintGuide_begin="20dp"
+        android:orientation="vertical"
+        tools:layout_editor_absoluteY="0dp"
+        tools:layout_editor_absoluteX="20dp" />
 </android.support.constraint.ConstraintLayout>
