--- a/app/src/main/res/layout/activity_departure_month.xml
+++ b/app/src/main/res/layout/activity_departure_month.xml
@@ -11,34 +11,53 @@
     tools:context="edu.wisc.ece.wiscotrail.DepartureMonth">
 
     <TextView
-        android:text="You are leaving on May 1, 1880."
+        android:text="What day would you like to leave for Lambeau?"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="151dp"
+        android:layout_marginTop="12dp"
         android:id="@+id/textView11"
         android:textSize="24sp"
         android:textAlignment="center"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
-
-    <TextView
-        android:text="Deal with it."
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView11"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="104dp"
-        android:id="@+id/textView12"
-        android:textSize="18sp" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <Button
-        android:text="Next"
+        android:text="September 1, 1880"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignRight="@+id/textView12"
-        android:layout_alignEnd="@+id/textView12"
-        android:layout_marginBottom="41dp"
-        android:id="@+id/button7"
-        android:onClick="goNext"/>
+        android:id="@+id/SeptemberBtn"
+        android:layout_below="@+id/AugustBtn"
+        android:layout_centerHorizontal="true"
+        android:onClick="goSeptember"/>
+
+    <Button
+        android:text="August 1, 1880"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/AugustBtn"
+        android:layout_marginTop="56dp"
+        android:layout_below="@+id/textView11"
+        android:layout_centerHorizontal="true"
+        android:onClick="goAugust"/>
+
+    <Button
+        android:text="October 1, 1880"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/OctoberBtn"
+        android:layout_below="@+id/SeptemberBtn"
+        android:layout_alignLeft="@+id/AugustBtn"
+        android:layout_alignStart="@+id/AugustBtn"
+        android:onClick="goOctober"/>
+
+    <Button
+        android:text="Don't Go"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/DontGoBtn"
+        android:layout_below="@+id/OctoberBtn"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="55dp"
+        android:onClick="dontGo"/>
 </RelativeLayout>
