--- a/app/src/main/res/layout/activity_pick_party.xml
+++ b/app/src/main/res/layout/activity_pick_party.xml
@@ -77,7 +77,7 @@
         app:layout_constraintBottom_toTopOf="@+id/button6" />
 
     <EditText
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
         android:text=""
@@ -109,7 +109,7 @@
 
     <android.support.constraint.Guideline
         android:layout_width="wrap_content"
-        android:layout_height="511dp"
+        android:layout_height="0dp"
         android:id="@+id/guideline3"
         app:layout_constraintGuide_begin="192dp"
         android:orientation="vertical"
